# SilvaViridis.Python.WinAPI

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  sample.py
.github/workflows/: build.yml
scripts/: clean.sh  setup.sh
src/SilvaViridis/Python/WinAPI/: Utils.py  advapi32.py  basetsd.py  errhandlingapi.py  guiddef.py  handleapi.py  kernel32.py  minwindef.py  setupapi.py  types.py  usbiodef.py  winbase.py  windef.py  winerror.py  winnt.py
src/SilvaViridis/Python/WinAPI/Wrapper/: COMPortDeviceManager.py  Consts.py  DeviceManager.py  DeviceNode.py  Errors.py  Exceptions.py  IO.py  IOAPISet.py  Memory.py  SetupAPI.py  Tools.py  Types.py  USBDeviceManager.py  USBDeviceManager2.py  USBGuids.py  USBNode.py  Utils.py  WinReg.py  __init__.py
